# crypto_etl

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: etl.py  main.py
